Update multi-os-v6.0.sh
improve  version detection
fix  latest download URLS for update download
terminal access script add on for burpsuite
rename file name for better detection